--- a/MasterThesis/chapter1.tex
+++ b/MasterThesis/chapter1.tex
@@ -27,8 +27,8 @@ Luke\cite{Luke}, refers to blockchain as a list of blocks that are linked to eac
     \item Proof of Work (PoW): 
     It is a mechanism that ensures consensus is done without any central control. With POW miners compete to complete their transaction first into blockchain and get rewards(e.g: Bitcoin, Ether).\\
     Miners(actors who participate in cryptocurrency transactions) connected to blockchain and accomplish tasks validating transactions to add new blocks by solving a cryptographic puzzle and anybody who completes their task sooner can add their block first in blockchain\cite{Pablo}.
-    \item Proof of Stack (PoS): 
-    It is an alternative to proof-of-work that fewer CPU computations for mining. In proof of stack, the chance of mining the next block depends on node balance. 
+    \item Proof of Stake (PoS): 
+    It is an alternative to proof-of-work that fewer CPU computations for mining. In proof of stake, the chance of mining the next block depends on node balance. 
     In private networks, however, where the participants know each other, consensus mechanisms such as proof of work are not required. This particularly removes the need for mining and gives us more variety of consensus protocols for picking from\cite{Christidis}.
     \item Proof of Authority: It confirms accounts and allows them to add a transaction in blocks. As this approach is much more centralized and transaction speed is faster, is prone to be attacked more than the other methods \cite{Luke}.
     \item Practical Byzantine Fault Tolerance: Blockchain tries to solve the problem called 'Byzantine Generals' which refers to some members on the network who send incoherent information related to the transaction to others. Since there is no authority on blockchain to correct them, leads to the unreliability of blockchain. The Practical Byzantine Fault Tolerance (PBFT) algorithm tries to achieve some algorithm to solve this issue in a way that uses the concept of primary and secondary "duplicates". Secondary copies automatically evaluate the decisions made by primitive and can collectively change to a primitive, if Primary is compromised \cite{Luke}.
@@ -49,7 +49,7 @@ According to Aithal\cite{Aithal} blockchain is used to transfer and exchange inf
 That should be noted that all kinds of blockchains consist of nodes and works on \textit{P2P} network. Aithal \cite{Aithal} classified blockchain into three types as bellow: public blockchain, private blockchain, and consortium blockchain. Besides this, there is another type of blockchain, known as the hybrid blockchain.
 \begin{itemize}
     \item \textbf{Public Blockchain}
-    This system allows anyone to join to network and create consensuses such as Ethereum. In a public blockchain, any miner (participant) can create consensus mechanisms such as proof of work, and proof of stack to validate the transaction with a low rate of validity\cite{Kalra}.
+    This system allows anyone to join to network and create consensuses such as Ethereum. In a public blockchain, any miner (participant) can create consensus mechanisms such as proof of work, and proof of stake to validate the transaction with a low rate of validity\cite{Kalra}.
     \item \textbf{Private Blockchain}: In this system, the only restricted participant has the right to validate the transaction. Therefore, it provides better privacy, improves scalability, and mitigates security issues. This blockchain does not have mining computation to reach the consensus because all participants are known in this network\cite{Kalra}. 
     \item \textbf{Consortium Blockchain}: This is semi-decentralized blockchain. This type of blockchain is used to do activities for a single organization like an organization, bank, etc. The difference between private blockchain with this type is that Consortium Blockchain is controlled by a group rather than a single authority \cite{Aithal}.
     \item \textbf{Hybrid Blockchain}: This type is a combination of public and private blockchains. Thus, it makes the benefit of privacy in private blockchain combined with the security and transparency of the public blockchain. In this type of blockchain, the user can control who gets access to which data on the blockchain. A transaction can be verified in a private network, and the user can release it to the public blockchain. By doing so, only selected parts of the records can be accessible in public and the rest could still maintain confidential in a private network\cite{Aithal}. 
